gccida/c0/kill_set_value
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/kill_set_value/src/regrename.c:1661:38: error: use of undeclared identifier 'machine_mode'
set_value_regno( x->fld[0].rtuint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), (  struct value_data *)data); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/kill_set_value/src/regrename.c:1661:53: error: expected expression
set_value_regno( x->fld[0].rtuint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), (  struct value_data *)data); 
                                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/kill_set_value/src/obj/regrename.o] Error 1
